pgp copy-paste with no spaces

--- a/assets/css/home-layout.scss
+++ b/assets/css/home-layout.scss
@@ -53,6 +53,10 @@
       }
       .text {
         color: $fg-color-dark;
+        margin-right: -0.2rem;
+        .spaced {
+          margin-right: 0.2rem;
+        }
       }
     }
     .links {
