--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- prettier-ignore -->
-    <title>{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
+    <title>{{ if not .IsHome }}{{ .LinkTitle | humanize }} - {{ end }}{{ .Site.Title }}</title>
     {{ $opts := dict "transpiler" "libsass" "targetPath" "style.css" }}
     {{ with resources.Get "css/index.scss" | toCSS $opts | minify | fingerprint }}
       <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" />
     {{ end }}
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    {{ with .OutputFormats.Get "rss" -}}
+      {{ printf `<link rel=%q type=%q href=%q title=%q>` .Rel .MediaType.Type .Permalink site.Title | safeHTML }}
+    {{ end }}
   </head>
   <body>
     {{ block "body" . }}
