section buttons layou

--- a/assets/css/home-layout.scss
+++ b/assets/css/home-layout.scss
@@ -133,7 +133,7 @@
   .home-layout-container .content.home .section-list {
     .section-item {
       flex-wrap: wrap;
-      padding: 0.75rem;
+      padding: 1rem 0.75rem;
       .icon {
         flex-basis: 100%;
       }
