--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
     <!-- prettier-ignore -->
     <title>{{ if not .IsHome }}{{ .LinkTitle | humanize }} - {{ end }}{{ .Site.Title }}</title>
     {{ $opts := dict "transpiler" "libsass" "targetPath" "_style.css" }}
-    {{ with resources.Get "css/index.scss" | toCSS $opts | minify | fingerprint }}
+    {{ with resources.Get "css/index.scss" | resources.ExecuteAsTemplate "" . | toCSS $opts | minify | fingerprint }}
       <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" />
     {{ end }}
     {{ range resources.Match "favicon/*.png" }}
