--- a/assets/css/basic.scss
+++ b/assets/css/basic.scss
@@ -156,7 +156,7 @@ article {
   ol {
     padding-left: 2rem;
     li {
-      margin: 0.5em 0;
+      margin: 0.25em 0;
       line-height: 1.5;
     }
   }
@@ -170,6 +170,13 @@ article {
   h4,
   h5,
   h6 {
-    margin: 1.5em 0 0.5em 0;
+    margin: 2em 0 0.5em 0;
+  }
+  h1 + h2,
+  h2 + h3,
+  h3 + h4,
+  h4 + h5,
+  h5 + h6 {
+    margin: 1em 0 0.5em 0 !important;
   }
 }
