--- a/assets/css/classic-layout.scss
+++ b/assets/css/classic-layout.scss
@@ -110,7 +110,7 @@
       }
     }
     .main-container {
-      margin: $margin-base-y * 2 $margin-base-x $margin-base-y $margin-base-x;
+      margin: $margin-base-y * 2 $margin-base-x;
     }
   }
 }
