--- a/assets/css/basic.scss
+++ b/assets/css/basic.scss
@@ -29,6 +29,7 @@ html {
   scroll-behavior: smooth;
   scrollbar-color: $color-fg-accent-op-m transparent;
   line-height: 1.3;
+  color-scheme: only dark;
 }
 body {
   height: 100%;
@@ -127,7 +128,7 @@ article {
       object-fit: contain;
       display: block;
       width: 100%;
-      max-height: 30rem;
+      max-height: 25rem;
       border: 1px solid $color-bg-accent-light;
     }
     figcaption {
