--- a/assets/css/basic.scss
+++ b/assets/css/basic.scss
@@ -25,6 +25,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 html {
   font-size: 16px;
+  font-family: system-ui;
   height: 100%;
   scroll-behavior: smooth;
   scrollbar-color: $color-fg-accent-op-m transparent;
