--- a/assets/css/classic-layout.scss
+++ b/assets/css/classic-layout.scss
@@ -76,7 +76,7 @@
 
 /* section specific - single of classic */
 .classic-layout-container header .content.post {
-  .pub-date {
+  .status {
     color: $color-fg-op-m;
     margin: 1em 0;
   }
