--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,7 +6,7 @@
     {{ partial "taxo_of_single.html" . }}
     {{ if .Lastmod }}
     <div class="status">
-      <span class="mtime">mtime={{ .Lastmod.Format .Site.Params.dateFormat }}</span>
+      mtime=<span class="mtime">{{ .Lastmod.Format .Site.Params.dateFormat }}</span>
       archived={{ default false .Params.archived }}
       words={{ .WordCount }}
     </div>
